<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">PacmanGo</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2FsYWJsZWZ1enpiYWxsIiwiYSI6ImNqbnBreHlhMDBqc20zbHBmZDRpczhjODcifQ.EGllCYxY5Rwl7-yr9j0vnA</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="location">Location</string>
    <string name="loading_spinner_title">Loading...</string>
    <string name="start_game">Start game</string>
    <string name="dot">.</string>
    <string name="survive">You survived for&#160;</string>
    <string name="seconds">&#160;seconds</string>
    <string name="new_game">New game</string>
    <string name="game_over">GAME OVER!</string>
    <string name="high_scores">High Scores</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="save_score">Save score</string>
    <string name="load_user_location">Getting user location...</string>
    <string name="leaderboardText">Leaderboard</string>
</resources>
